tests/ui/several_kind_attrs.stderr
error: only one of #[add], #[replace], or #[delete] is allowed
 --> tests/ui/several_kind_attrs.rs:5:9
  |
5 |         #[replace]
  |         ^^^^^^^^^^
