tests/ui/several_kind_attrs.rs
#[angstropass::langs]
mod langs {
    mod l1 {
        #[add]
        #[replace]
        type Foo = i32;
    }
}

fn main() {}
